--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE>
 <html>
+  <head>
+    <link rel="reset" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+  </head>
 
+  <body>
+    <header></header>
+
+    <main></main>
+      
+      
+    <footer></footer>
+
+  </body>
 
 </html>
+
