put test and images in header in html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
   </head>
 
   <body>
-    <header></header>
+    <header>
+      <nav>
+          <img src="img/logo.png" alt="silverware logo">
+          <ul>
+            <li>Delicious</li>
+            <li>THE BEST FOOD BLOG ON THE WEB.</li>
+          </ul>
+          <ul>
+            <li><img src="img/fb-icon.png" alt="fb icon"></li>
+            <li><img src="img/twit-icon.png" alt="twitter icon"></li>
+            <li><img src="img/gp-icon.png" alt="google plus"></li>
+            <li><img src="img/insta-icon.png" alt="instagram"></li>
+            <li><img src="img/flic-icon.png" alt="flic icon"></li>
+            <li><img src="img/pint-icon.png" alt="pintrest"></li>
+            <li><img src="img/rss-icon.png" alt="rss icon"></li>
+            <li><img src="img/mail-icon.png" alt="mail icon"></li>
+          </ul>
+      </nav>
+
+    </header>
+
+
+
 
     <main></main>
       
