--- a/index.html
+++ b/index.html
@@ -24,16 +24,64 @@
             <li><img src="img/mail-icon.png" alt="mail icon"></li>
           </ul>
       </nav>
-
     </header>
 
 
+    <main>
+      <h1>Chocolate Pizza</h1>
+      <ul>
+        <li>POSTED ON 15 DEC 2013 / DESSERTS</li>
+        <li><img src="img/print-icon.png" alt="print icon"></li>
+        <li>PRINT</li>
+      </ul>
+      <img src="img/choco-pizza.png" alt="big choco pizza pic">
 
+      <section>
+        <div>
+          <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+        </div>
+        <div>
+          <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooked.</p>
+        </div>
+        <div>
+          <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen misture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+        </div>
+      </section>
 
-    <main></main>
+      <section>
+        <ul>
+          <li>1 1/2 cups milk</li>
+          <li>1/2 cup mascarpone</li>
+          <li>1/2 tsp pink salt</li>
+          <li>1 lb Black Mission Figs</li>
+          <li>1/2 cup brown sugar</li>
+          <li>2-4 tbsp water</li>
+        </ul>
+        <ul>
+          <li>1 1/2 cups heavy cream</li>
+          <li>1/3 granulated sugar</li>
+          <li>2 egg yolks</li>
+          <li>1 lemon, juiced</li>
+          <li>2 tbsp butter</li>
+          <li>1 cup honey roasted peacans, roughly chopped</li>
+        </ul>
+      </section>
+    </main>
       
-      
-    <footer></footer>
+    <footer>
+        <img src="img/van-pic.png" alt="vanessa pic">
+        <section>
+          <h4>Vanessa Stevenson</h4>
+          <h5>Food entusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</h5>
+          <button>SHARE RECIPE</button>
+        </section>
+
+        <img src="img/small-logo.png" alt="small silverware logo">
+        <div>
+          <p>Delicious &copy 2013 All Right Reserved.</p>
+          <p>Proudly published with Ghost.</p>
+        </div>
+    </footer>
 
   </body>
 
