--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
   <head>
-    <link rel="reset" href="reset.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -10,10 +10,10 @@
       <nav>
           <img src="img/logo.png" alt="silverware logo">
           <ul>
-            <li>Delicious</li>
-            <li>THE BEST FOOD BLOG ON THE WEB.</li>
+            <li id="delicious">Delicious</li>
+            <li id="bestBlog">THE BEST FOOD BLOG ON THE WEB.</li>
           </ul>
-          <ul>
+          <ul id="headerImages">
             <li><img src="img/fb-icon.png" alt="fb icon"></li>
             <li><img src="img/twit-icon.png" alt="twitter icon"></li>
             <li><img src="img/gp-icon.png" alt="google plus"></li>
@@ -29,12 +29,13 @@
 
     <main>
       <h1>Chocolate Pizza</h1>
-      <ul>
+      <ul id="printImg"> 
         <li>POSTED ON 15 DEC 2013 / DESSERTS</li>
-        <li><img src="img/print-icon.png" alt="print icon"></li>
-        <li>PRINT</li>
+        <li id="printIcon"><img src="img/print-icon.png" alt="print icon"></li>
+        <li id="printWord">PRINT</li>
       </ul>
-      <img src="img/choco-pizza.png" alt="big choco pizza pic">
+
+      <img id="chocoPizza" src="img/choco-pizza.png" alt="big choco pizza pic">
 
       <section>
         <div>
@@ -49,7 +50,8 @@
       </section>
 
       <section>
-        <ul>
+        <img src="img/list-bg.png" alt="list pic">
+        <ul id="leftList">
           <li>1 1/2 cups milk</li>
           <li>1/2 cup mascarpone</li>
           <li>1/2 tsp pink salt</li>
@@ -57,7 +59,7 @@
           <li>1/2 cup brown sugar</li>
           <li>2-4 tbsp water</li>
         </ul>
-        <ul>
+        <ul id="rightList">
           <li>1 1/2 cups heavy cream</li>
           <li>1/3 granulated sugar</li>
           <li>2 egg yolks</li>
@@ -68,6 +70,7 @@
       </section>
     </main>
       
+
     <footer>
         <img src="img/van-pic.png" alt="vanessa pic">
         <section>
@@ -76,10 +79,10 @@
           <button>SHARE RECIPE</button>
         </section>
 
-        <img src="img/small-logo.png" alt="small silverware logo">
         <div>
-          <p>Delicious &copy 2013 All Right Reserved.</p>
-          <p>Proudly published with Ghost.</p>
+          <img src="img/small-logo.png" alt="small silverware logo">
+          <p id="copyright">Delicious &copy 2013 All Right Reserved.</p>
+          <p id="published">Proudly published with Ghost.</p>
         </div>
     </footer>
 
